@@ -1,7 +1,7 @@
 //
 // Platform.h
 //
-// $Id: //poco/1.3/Foundation/include/Poco/Platform.h#4 $
+// $Id: //poco/1.3/Foundation/include/Poco/Platform.h#5 $
 //
 // Library: Foundation
 // Package: Core
@@ -135,6 +135,7 @@
 #define POCO_ARCH_ARM     0x0a
 #define POCO_ARCH_M68K    0x0b
 #define POCO_ARCH_S390    0x0c
+#define POCO_ARCH_SH      0x0d
 
 
 #if defined(__ALPHA) || defined(__alpha) || defined(__alpha__) || defined(_M_ALPHA)
@@ -178,11 +179,18 @@
 		#define POCO_ARCH_LITTLE_ENDIAN 1
 	#endif
 #elif defined(__m68k__)
-    #define POCO_ARCH POCO_ARCH_M68K
-    #define POCO_ARCH_BIG_ENDIAN 1
+	#define POCO_ARCH POCO_ARCH_M68K
+	#define POCO_ARCH_BIG_ENDIAN 1
 #elif defined(__s390__)
-    #define POCO_ARCH POCO_ARCH_S390
-    #define POCO_ARCH_BIG_ENDIAN 1
+	#define POCO_ARCH POCO_ARCH_S390
+	#define POCO_ARCH_BIG_ENDIAN 1
+#elif defined(__sh__)
+	#define POCO_ARCH POCO_ARCH_SH
+	#if defined(__LITTLE_ENDIAN__)
+		#define POCO_ARCH_LITTLE_ENDIAN 1
+	#else
+		#define POCO_ARCH_BIG_ENDIAN 1
+	#endif
 #endif
 
 
