@@ -5,6 +5,8 @@ Release 1.3.6p1
 
 - added support for using external zlib, pcre, expat and sqlite3 instead of 
   bundled ones (-DPOCO_UNBUNDLED, configure --unbundled)
+- fixed SF# 2911407: Add sh4 support
+- fixed SF# 2912746: RSAKey::EXP_LARGE doesn't work
 
 
 Release 1.3.6 (2009-11-24)
